# dioxycomp-ui

./: .gitignore  LICENSE  README.md
.github/workflows/: check-main.yml  generate-pages.yml
dioxycomp-headless/: Cargo.toml
dioxycomp-headless/src/: components.rs
dioxycomp-headless/src/components/: Button.rs  Checkbox.rs  Label.rs  Radio.rs  Select.rs  SimpleButton.rs  button.rs
examples/web/: Cargo.toml  Dioxus.toml  input.css
examples/web-hydrated/: Cargo.toml  Dioxus.toml  tailwind.config.js
examples/web-hydrated/public/: tailwind_input.css
examples/web-hydrated/public/css/: styles.css  tailwind.css
examples/web-hydrated/src/: app.rs  main.rs  router.rs
examples/web-hydrated/src/app/: components.rs
examples/web-hydrated/src/app/components/: Header.rs  Main.rs  Nav.rs
examples/web-hydrated/src/pages/: home.rs
examples/web-hydrated/src/pages/headless/: HeadlessPage.rs  components.rs
examples/web-hydrated/src/pages/headless/components/: ButtonPage.rs  CheckboxPage.rs  RadioPage.rs  SelectPage.rs  SideBarNav.rs
examples/web-hydrated/src/pages/home/: HomePage.rs
examples/web-hydrated/src/pages/home/components/: HeadlessCard.rs
examples/web-hydrated/src/router/: PageLoader.rs  PageRouter.rs
examples/web/public/css/: tailwind.css
examples/web/src/: app.rs  main.rs  pages.rs
examples/web/src/app/components/: Header.rs  Nav.rs
examples/web/src/common_components/: Header.rs  Main.rs  Nav.rs
examples/web/src/components/: Header.rs  Main.rs  Nav.rs
examples/web/src/pages/: Home.rs  headless.rs
examples/web/src/pages/headless/: HeadlessPage.rs
examples/web/src/pages/headless/components/: Button.rs
examples/web/src/pages/home/: HomePage.rs  components.rs
examples/web/src/pages/home/components/: HeadlessCard.rs
examples/web/src/router/: PageRouter.rs
