[package]
name = "web-hydrated"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-web = { version="0.4.0", features = ["hydrate"], optional = true }
 
dioxus = "0.4.0"
dioxus-fullstack = { version="0.4.1", features = ["router"] }
dioxus-router = "0.4.1" 
tokio = { version="1.33.0", features = ["full"], optional = true }
serde = "1.0.188"
dioxycomp-headless = { path="../../dioxycomp-headless" } 

[features]
default = []
ssr = ["tokio", "dioxus-fullstack/ssr"]
web = ["dioxus-web"]
