[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-fullstack = { version = "0.4.1", features = ["router"] }
dioxus-router = "0.4.1"
serde = { version = "1.0.188", features = ["derive"] }
dioxycomp-headless = { path="../../dioxycomp-headless" }

[features]
default = []
ssr = ["dioxus-fullstack/salvo"]
web = ["dioxus-router/web", "dioxus-fullstack/web"]
